# misc

./: .gitignore  CMakeLists.txt  build.sh
dev_env/: Dockerfile  README.md  bashrc  build_docker.sh  config.sh  init_ubuntu.sh  setup.sh  vimrc  vllm-v0.1.1.Dockerfile
shell/: log_with_color.sh  recursive_copy.sh  replace.sh  shadowsocks.sh
src/: test_const.cc  test_preprocessor_macros.cc  use_glog.cc  variadic_macros.cc
src/aero/: dynamic_loader.cc  dynamic_loader.h  macros.h  plugin.cc  plugin.h  plugin_ut.cc
src/ai-agent/: pyproject.toml
src/effective_cpp/: item47_use_traits_classes_for_infomation_about_types.cc
src/flappy_bird/: app.py  highscores.json  requirements.txt
src/flappy_bird/static/css/: style.css
src/flappy_bird/static/js/: game.js  main.js
src/flappy_bird/templates/: index.html
src/grand-things/backend/: pyproject.toml
src/grand-things/backend/app/: database.py  main.py  models.py
src/grand-things/backend/app/services/: tag_extractor.py
src/grand-things/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/grand-things/frontend/src/: App.vue  main.js
src/grand-things/frontend/src/components/: AppFooter.vue  NavHeader.vue
src/grand-things/frontend/src/composables/: useTheme.js
src/grand-things/frontend/src/router/: index.js
src/grand-things/frontend/src/style/: index.scss
src/grand-things/frontend/src/views/: AddEventPage.vue  HomePage.vue  SearchPage.vue  StatisticsPage.vue  TimelinePage.vue
src/ray/: README.md  local_ray_demo.py  ray_main.py  requirements.txt  simple_ray_demo.py
src/simd/: avx_benchmark.cc
src/tax_cost_website/: app.py  calc_tax_and_cost.py
src/tax_cost_website/static/js/: main.js
src/test_recursive_thread_pool/: threadpool.h
src/thread_implementation/: Thread.cc  Thread.h  thread_unittest.cc
thread_implementation/: CMakeLists.txt  Thread.cc  build.sh  pstree.sh  thread_unittest.cc
transformer/: transformer_from_scratch.ipynb
vibe_coding/ai-agent/: main.py
vibe_coding/flappy_bird/: README.md  start.bat  start.sh
vibe_coding/flappy_bird/static/js/: game.js  main.js
vibe_coding/flappy_bird/templates/: index.html
vibe_coding/grand-things/: README.md  start.sh  test_auth.py
vibe_coding/grand-things/backend/: init_db.py  main.py  pyproject.toml  requirements.txt
vibe_coding/grand-things/backend/app/: __init__.py  database.py  main.py  models.py
vibe_coding/grand-things/backend/app/api/: auth.py  events.py
vibe_coding/grand-things/backend/app/core/: auth.py  dependencies.py
vibe_coding/grand-things/backend/app/services/: user_service.py
vibe_coding/grand-things/frontend/: index.html  package-lock.json
vibe_coding/grand-things/frontend/src/: App.vue  main.js
vibe_coding/grand-things/frontend/src/api/: auth.js  events.js
vibe_coding/grand-things/frontend/src/components/: AppFooter.vue  NavHeader.vue
vibe_coding/grand-things/frontend/src/router/: index.js
vibe_coding/grand-things/frontend/src/stores/: auth.js
vibe_coding/grand-things/frontend/src/views/: AddEventPage.vue  EventDetailPage.vue  HomePage.vue  LoginPage.vue  ProfilePage.vue  SearchPage.vue  StatisticsPage.vue  TimelinePage.vue
vibe_coding/tax_cost_website/: README.md  requirements.txt
vibe_coding/tax_cost_website/static/css/: style.css
vibe_coding/tax_cost_website/templates/: index.html
