[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "jieba>=0.42.0",
    "pydantic>=2.6.0",
    "python-dateutil>=2.8.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.24.0",
]
